--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="hero">
+        <div class="hero__content">
+            <h1 class="hero__content__brand">
+                <img src="../dist/images/disneyplus.svg" alt="disney plus">
+            </h1>
+            <h3 class="title--small">
+                As melhore historias em um só lugar
+            </h3>
+            <p>
+                <a href="" class="link--text">Assinar o Disney+</a> <br>
+                <span class="text">R$ 27,90/mês  o R$279/ano á vista*</span>
+            </p>
+            <ul class="hero__content__combos">
+                <li class="hero__content__combos__combo">
+                    <img src="../dist/images/logos/disney_star_plus.png" alt="">
+                    <button>Assine Agora</button>
+                    <span class="text">R$45,90/mês*</span>
+                </li>
+                <li class="hero__content__combos__combo">
+                    <img src="../dist/images/logos/disney_star_plus.png" alt="">
+                    <button>Assine Agora</button>
+                    <span class="text">R$55,90/mês*</span>
+                </li>
+            </ul>
+            <p class="text--small">
+                *O preço pode variar caso seja feito atráves de outras plataformas
+            </p>
+        </div>
+    </section>
 </body>
 </html>
