--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../dist/css/main.css">
     <title>Document</title>
 </head>
+
 <body>
+    <header class="header header--is-hidden ">
+        <div class="header__container">
+            <h1 class="">
+                <img class="header__logo" src="../dist/images/disneyplus.svg" alt="disney plus">
+            </h1>
+            <ul class="header__links">
+            <li class=" header__links__item"><a href="" class="button button--secundario">
+                Assine agora
+            </a></li>
+            <li class="header__links__item "><a class="button button--dark" href="">Entrar</a></li>
+            </ul>
+        </div>
+    </header>
     <section class="hero">
         <div class="hero__content">
-            <h1 class="hero__content__brand">
+            <div class="hero__content__brand">
                 <img src="../dist/images/disneyplus.svg" alt="disney plus">
-            </h1>
+            </div>
             <h3 class="title--small">
                 As melhore historias em um só lugar
             </h3>
             <p>
                 <a href="" class="link--text">Assinar o Disney+</a> <br>
-                <span class="text">R$ 27,90/mês  o R$279/ano á vista*</span>
+                <span class="text">R$ 27,90/mês o R$279/ano á vista*</span>
             </p>
             <ul class="hero__content__combos">
                 <li class="hero__content__combos__combo">
@@ -38,9 +53,10 @@
     </section>
     <section class="shows">
         <nav class="shows__tabs">
-            <button data-tab-button="em_breve" class="shows__tabs__button shows__tabs__button--is-active">Em breve</button>
-            <button  data-tab-button="populares" class="shows__tabs__button">Mais populares</button>
-            <button  data-tab-button="star-plus" class="shows__tabs__button">Mais no Star+</button>
+            <button data-tab-button="em_breve" class="shows__tabs__button shows__tabs__button--is-active">Em
+                breve</button>
+            <button data-tab-button="populares" class="shows__tabs__button">Mais populares</button>
+            <button data-tab-button="star-plus" class="shows__tabs__button">Mais no Star+</button>
         </nav>
         <ul data-tab-id="em_breve" class="shows__list shows__list--is-active ">
             <li class="shows__list__item">
@@ -134,11 +150,205 @@
                 <p class="text--big">
                     No disney+ você encontra as últimas estreias do cinema, originais e clássicos inesquecíveis.
                 </p>
-                <button  class="button">Assine Agora</button>
+                <button class="button">Assine Agora</button>
             </li>
         </ul>
         <p class="text--small">*O preço pode variar caso seja feito atráves de outras plataformas</p>
     </section>
+
+    <section class="img-text-section">
+        <img src="../dist/images/tv_pc_tablet_celular.png" alt="">
+        <div class="img-text-section__text">
+            <h2 class="title--big">Assista do seu jeito</h2>
+            <p class="text--big">
+                Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de
+                títulos em 4K não para de crescer. Além disso, para a felicidade de todos, é possível assistir em até 4
+                telas ao mesmo tempo </p>
+        </div>
+
+
+    </section>
+    <section class="img-text-section img-text-section--image-full-width">
+        <picture>
+            <source media="(max-width: 768px)" srcset="../dist/images/fundo_rei_leao_celular.png" />
+            <img src="../dist/images/fundo_rei_leao.png" alt="">
+        </picture>
+        <div class="img-text-section__text img-text-section--image-full-width__text">
+            <h2 class="title--big">baixe filmes e series</h2>
+            <p class="text--big">
+                Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem
+                internet.
+            </p>
+        </div>
+    </section>
+
+
+
+    <section class="avalable-devices">
+        <h2 class="title--big"> Disponivel nos seus dipositivos favoritos</h2>
+        <ul class="avalable-devices__list">
+            <li class="avalable-devices__list__item">
+                <img src="../dist/images/dispositivos/computador.png" alt="">
+                <h4 class="title--small">Computador</h4>
+                <ul class="text">
+                    <li class="text--small">Chrome OS</li>
+                    <li class="text--small">Mac Os</li>
+                    <li class="text--small">Pc Windowns</li>
+                </ul>
+            </li>
+            <li class="avalable-devices__list__item">
+                <img src="../dist/images/dispositivos/tv.png" alt="">
+                <h4 class="title--small">Computador</h4>
+                <ul class="text">
+                    <li class="text--small">Chrome OS</li>
+                    <li class="text--small">Mac Os</li>
+                    <li class="text--small">Pc Windowns</li>
+                </ul>
+            </li>
+            <li class="avalable-devices__list__item">
+                <img src="../dist/images/dispositivos/videogames.png" alt="">
+                <h4 class="title--small">Computador</h4>
+                <ul class="text">
+                    <li class="text--small">Chrome OS</li>
+                    <li class="text--small">Mac Os</li>
+                    <li class="text--small">Pc Windowns</li>
+                </ul>
+            </li>
+            <li class="avalable-devices__list__item">
+                <img src="../dist/images/dispositivos/celular.png" alt="">
+                <h4 class="title--small">Computador</h4>
+                <ul class="text">
+                    <li class="text--small">Chrome OS</li>
+                    <li class="text--small">Mac Os</li>
+                    <li class="text--small">Pc Windowns</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+    <section class="faq">
+        <h2 class="title--medium">Preguntas frequentes</h2>
+        <ul class="faq__questions">
+
+            <li class="faq__questions__item">
+                <div data-faq-question class="faq__questions__item__question">
+                    O que está incluído no Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    <p class="faq__questions__item__answer__primeiro">
+                        O Disney+ oferece:
+                    </p>
+
+                    <ul>
+
+                        <li>
+                            <p><span>Experiência de entretenimento exclusiva.</span></p>
+                        </li>
+                        <li>
+                            <p><span>As melhores histórias da Disney, Pixar, Marvel, Star Wars e National Geographic,
+                                    tudo em um só lugar.</span></p>
+                        </li>
+                        <li>
+                            <p><span>Downloads ilimitados em até 10 dispositivos compatíveis.</span></p>
+                        </li>
+                        <li>
+                            <p><span>Mais de 300 títulos em 4K UHD e HDR.</span></p>
+                        </li>
+                        <li>
+                            <p><span>A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem
+                                    custo adicional.</span></p>
+                        </li>
+                        <li>
+                            <p><span>IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis
+                                    com o Disney+.</span></p>
+                        </li>
+                    </ul>
+                </div>
+
+            </li>
+            <li class="faq__questions__item ">
+                <div data-faq-question class="faq__questions__item__question">
+                    Já tem o Disney+ ou o Star+ e quer o Combo+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    <p class="faq__questions__item__answer__primeiro">
+                        Ao assinar o Combo+:
+                    </p>
+                    <ul>
+                        <li>
+                            <p><span>O valor da sua assinatura existente será descontado do preço do Combo+.</span></p>
+                        </li>
+                        <li>
+                            <p><span>Se você assina o plano mensal, o valor que você paga mensalmente será descontado do
+                                    preço do Combo+.</span></p>
+                        </li>
+                        <li>
+                            <p><span>Se você tem uma assinatura anual do Disney+ cobrada diretamente pelo Disney+, não é
+                                    possível mudar para o Combo+ no momento. Entre em contato com o suporte do Disney+
+                                    para conhecer suas opções.</span></p>
+                        </li>
+                        <li>
+                            <p><span>Você vai receber um e-mail com os valores detalhados assim que finalizar o
+                                    pagamento.</span></p>
+                        </li>
+                        <li>
+                            <p><span>Lembre-se: você pode cancelar a assinatura quando quiser..</span></p>
+                        </li>
+
+                    </ul>
+                </div>
+            </li>
+
+            <li class="faq__questions__item">
+                <div data-faq-question class="faq__questions__item__question">
+                    Quais formas de pagamento posso utilizar?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    <p class="faq__questions__item__answer__primeiro">
+                        Você pode utilizar: cartão de débito, cartão de crédito, PayPal, Mercado Pago, e também empresas
+                        parceiras como Google Play Store, App Store da Apple; Mercado Livre e provedores locais de TV,
+                        telefonia e internet.
+                    </p>
+
+                </div>
+            </li>
+
+        </ul>
+    </section>
+    <footer class="footer">
+        <div class="footer__container">
+            <img class="footer__logo" src="../dist/images/disneyplus.svg" alt="">
+            <ul class="footer__links">
+                <li class="footer__links__item">
+                <div class="language-selector">
+                    <img src="../dist/images/icones/globe.svg" alt="">
+                        <select> 
+                            <option>
+                                English
+                            </option>
+                            <option selected>Portugues</option>
+                        </select>
+                    </div>
+                </li>
+                <li class="footer__links__item"><a class="text--small" href="">Termos e condiçoões de uso</a></li>
+                <li class="footer__links__item"><a class="text--small" href="">Política de privacidade</a></li>
+                <li class="footer__links__item"><a class="text--small" href="">Proteção de Dados no Brasil</a></li>
+                <li class="footer__links__item"><a class="text--small" href="">Contrato de Assinatura</a></li>
+                <li class="footer__links__item"><a class="text--small" href="">Ajuda</a></li>
+                <li class="footer__links__item"><a class="text--small" href="">sobre o Disney+</a></li>
+            </ul>
+
+            <p class="text--small">
+                ® 2024 Disney, Disney+ e The Walt Disney Company. Todos os direitos reservados. Serviço de assinatura
+                paga. Conteúdo sujeito a disponibilidade.
+            </p>
+            <p class="text--small">
+                Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Disney+ é
+                comercializado por The Walt Disney Company (Brasil) Ltda., World Trade Center, Av. Das Nações Unidas,
+                12.551, 12.555, 12.559, Piso 10, São Paulo/SP – CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004-20
+            </p>
+        </div>
+    </footer>
     <script src="./scripts/main.js"></script>
 </body>
+
 </html>
