--- a/src/index.html
+++ b/src/index.html
@@ -348,7 +348,7 @@
             </p>
         </div>
     </footer>
-    <script src="./scripts/main.js"></script>
+    <script src="./dist/jspm/main.js"></script>
 </body>
 
 </html>
