--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../dist/css/main.css">
+    <link rel="stylesheet" href="./dist/css/main.css">
     <title>Document</title>
 </head>
 
@@ -12,7 +12,7 @@
     <header class="header header--is-hidden ">
         <div class="header__container">
             <h1 class="">
-                <img class="header__logo" src="../dist/images/disneyplus.svg" alt="disney plus">
+                <img class="header__logo" src="./dist/images/disneyplus.svg" alt="disney plus">
             </h1>
             <ul class="header__links">
             <li class=" header__links__item"><a href="" class="button button--secundario">
@@ -25,7 +25,7 @@
     <section class="hero">
         <div class="hero__content">
             <div class="hero__content__brand">
-                <img src="../dist/images/disneyplus.svg" alt="disney plus">
+                <img src="./dist/images/disneyplus.svg" alt="disney plus">
             </div>
             <h3 class="title--small">
                 As melhore historias em um só lugar
@@ -36,12 +36,12 @@
             </p>
             <ul class="hero__content__combos">
                 <li class="hero__content__combos__combo">
-                    <img src="../dist/images/logos/disney_star_plus.png" alt="">
+                    <img src="./dist/images/logos/disney_star_plus.png" alt="">
                     <button class="button">Assine Agora</button>
                     <span class="text">R$45,90/mês*</span>
                 </li>
                 <li class="hero__content__combos__combo">
-                    <img src="../dist/images/logos/disney_star_plus.png" alt="">
+                    <img src="./dist/images/logos/disney_star_plus.png" alt="">
                     <button class="button">Assine Agora</button>
                     <span class="text">R$55,90/mês*</span>
                 </li>
@@ -60,62 +60,62 @@
         </nav>
         <ul data-tab-id="em_breve" class="shows__list shows__list--is-active ">
             <li class="shows__list__item">
-                <img src="../dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/em_breve/desencantada.jpg" alt="spidey">
+                <img src="./dist/images/em_breve/desencantada.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/em_breve/lobisomem.jpg" alt="spidey">
+                <img src="./dist/images/em_breve/lobisomem.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/em_breve/sem_limites.jpg" alt="spidey">
+                <img src="./dist/images/em_breve/sem_limites.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/em_breve/the_santa_clauses.jpg" alt="spidey">
+                <img src="./dist/images/em_breve/the_santa_clauses.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/em_breve/willow.jpg" alt="spidey">
+                <img src="./dist/images/em_breve/willow.jpg" alt="spidey">
             </li>
         </ul>
         <ul data-tab-id="populares" class="shows__list">
             <li class="shows__list__item">
-                <img src="../dist/images/mais_populares/bluey.jpg" alt="spidey">
+                <img src="./dist/images/mais_populares/bluey.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/mais_populares/cavaleira_da_lua.jpg" alt="spidey">
+                <img src="./dist/images/mais_populares/cavaleira_da_lua.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/mais_populares/o_incrivel_dr_pol.jpg" alt="spidey">
+                <img src="./dist/images/mais_populares/o_incrivel_dr_pol.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/mais_populares/obi_wan.jpg" alt="spidey">
+                <img src="./dist/images/mais_populares/obi_wan.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/mais_populares/red.jpg" alt="spidey">
+                <img src="./dist/images/mais_populares/red.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/mais_populares/tudo_igual_sqn.jpg" alt="spidey">
+                <img src="./dist/images/mais_populares/tudo_igual_sqn.jpg" alt="spidey">
             </li>
         </ul>
         <ul data-tab-id="star-plus" class="shows__list">
             <li class="shows__list__item">
-                <img src="../dist/images/mais_no_star_plus/belair.jpg" alt="spidey">
+                <img src="./dist/images/mais_no_star_plus/belair.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/mais_no_star_plus/libertadores.jpg" alt="spidey">
+                <img src="./dist/images/mais_no_star_plus/libertadores.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/mais_no_star_plus/nba.jpg" alt="spidey">
+                <img src="./dist/images/mais_no_star_plus/nba.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/mais_no_star_plus/os_simpson.jpg" alt="spidey">
+                <img src="./dist/images/mais_no_star_plus/os_simpson.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/mais_no_star_plus/premier_league.jpg" alt="spidey">
+                <img src="./dist/images/mais_no_star_plus/premier_league.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="../dist/images/mais_no_star_plus/the_kardashians.jpg" alt="spidey">
+                <img src="./dist/images/mais_no_star_plus/the_kardashians.jpg" alt="spidey">
             </li>
         </ul>
     </section>
@@ -123,7 +123,7 @@
         <h2 class="title--big">Escolha seu plano</h2>
         <ul class="plans__list">
             <li class="plans__list__item">
-                <img src="../dist/images/logos/disney_star_plus_starzplay_underline.png" alt="">
+                <img src="./dist/images/logos/disney_star_plus_starzplay_underline.png" alt="">
                 <strong class="title--small">
                     R$ 27,90/mês*
                 </strong>
@@ -133,7 +133,7 @@
                 <button class="button">Assine Agora</button>
             </li>
             <li class="plans__list__item">
-                <img src="../dist/images/logos/disney_star_plus_sm.png" alt="">
+                <img src="./dist/images/logos/disney_star_plus_sm.png" alt="">
                 <strong class="title--small">
                     R$ 27,90/mês*
                 </strong>
@@ -143,7 +143,7 @@
                 <button class="button">Assine Agora</button>
             </li>
             <li class="plans__list__item">
-                <img src="../dist/images/logos/disneyplus_underline.png" alt="">
+                <img src="./dist/images/logos/disneyplus_underline.png" alt="">
                 <strong class="title--small">
                     R$ 27,90/mês*
                 </strong>
@@ -157,7 +157,7 @@
     </section>
 
     <section class="img-text-section">
-        <img src="../dist/images/tv_pc_tablet_celular.png" alt="">
+        <img src="./dist/images/tv_pc_tablet_celular.png" alt="">
         <div class="img-text-section__text">
             <h2 class="title--big">Assista do seu jeito</h2>
             <p class="text--big">
@@ -170,8 +170,8 @@
     </section>
     <section class="img-text-section img-text-section--image-full-width">
         <picture>
-            <source media="(max-width: 768px)" srcset="../dist/images/fundo_rei_leao_celular.png" />
-            <img src="../dist/images/fundo_rei_leao.png" alt="">
+            <source media="(max-width: 768px)" srcset="./dist/images/fundo_rei_leao_celular.png" />
+            <img src="./dist/images/fundo_rei_leao.png" alt="">
         </picture>
         <div class="img-text-section__text img-text-section--image-full-width__text">
             <h2 class="title--big">baixe filmes e series</h2>
@@ -188,7 +188,7 @@
         <h2 class="title--big"> Disponivel nos seus dipositivos favoritos</h2>
         <ul class="avalable-devices__list">
             <li class="avalable-devices__list__item">
-                <img src="../dist/images/dispositivos/computador.png" alt="">
+                <img src="./dist/images/dispositivos/computador.png" alt="">
                 <h4 class="title--small">Computador</h4>
                 <ul class="text">
                     <li class="text--small">Chrome OS</li>
@@ -197,7 +197,7 @@
                 </ul>
             </li>
             <li class="avalable-devices__list__item">
-                <img src="../dist/images/dispositivos/tv.png" alt="">
+                <img src="./dist/images/dispositivos/tv.png" alt="">
                 <h4 class="title--small">Computador</h4>
                 <ul class="text">
                     <li class="text--small">Chrome OS</li>
@@ -206,7 +206,7 @@
                 </ul>
             </li>
             <li class="avalable-devices__list__item">
-                <img src="../dist/images/dispositivos/videogames.png" alt="">
+                <img src="./dist/images/dispositivos/videogames.png" alt="">
                 <h4 class="title--small">Computador</h4>
                 <ul class="text">
                     <li class="text--small">Chrome OS</li>
@@ -215,7 +215,7 @@
                 </ul>
             </li>
             <li class="avalable-devices__list__item">
-                <img src="../dist/images/dispositivos/celular.png" alt="">
+                <img src="./dist/images/dispositivos/celular.png" alt="">
                 <h4 class="title--small">Computador</h4>
                 <ul class="text">
                     <li class="text--small">Chrome OS</li>
@@ -316,11 +316,11 @@
     </section>
     <footer class="footer">
         <div class="footer__container">
-            <img class="footer__logo" src="../dist/images/disneyplus.svg" alt="">
+            <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="">
             <ul class="footer__links">
                 <li class="footer__links__item">
                 <div class="language-selector">
-                    <img src="../dist/images/icones/globe.svg" alt="">
+                    <img src="./dist/images/icones/globe.svg" alt="">
                         <select> 
                             <option>
                                 English
