--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
     </section>
     <section class="shows">
         <nav class="shows__tabs">
-            <button data-tab-button="em_breve" class="shows__tabs__button shows__tabs__button--is-active">Em
-                breve</button>
+            <button data-tab-button="em_breve" class="shows__tabs__button shows__tabs__button--is-active">Em breve</button>
             <button data-tab-button="populares" class="shows__tabs__button">Mais populares</button>
             <button data-tab-button="star-plus" class="shows__tabs__button">Mais no Star+</button>
         </nav>
@@ -132,6 +131,7 @@
                 </p>
                 <button class="button">Assine Agora</button>
             </li>
+            
             <li class="plans__list__item">
                 <img src="./dist/images/logos/disney_star_plus_sm.png" alt="">
                 <strong class="title--small">
@@ -348,7 +348,7 @@
             </p>
         </div>
     </footer>
-    <script src="./dist/jspm/main.js"></script>
+    <script src="./dist/js/main.js"></script>
 </body>
 
 </html>
